deep-rtc contents

--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -4,7 +4,7 @@ institution:
   - Electrical and Computer Engineering
   - University of California, San Diego
 links:
-  Scholar: "https://scholar.google.pt/citations?user=_ntLSQ4AAAAJ&hl=en"
+  Scholar: "https://scholar.google.com/citations?user=_ntLSQ4AAAAJ&view_op=list_works&sortby=pubdate"
   Github: "https://github.com/pedro-morgado"
   CV: "assets/files/cv.pdf"
   Email: "mailto:pmaravil@eng.ucsd.edu"
