--- a/_data/awards.yaml
+++ b/_data/awards.yaml
@@ -1,5 +1,9 @@
-- title: Outstanding reviewer
-  time: ICCV, 2017
+- title: Reviewer recognition
+  description: 
+    "&bull; &nbsp; Outstanding reviewer, CVPR, 2021<br>
+    &bull; &nbsp; Top 10% reviewer, NeurIPS 2020<br>
+    &bull; &nbsp; Top reviewer, NeurIPS 2019<br>
+    &bull; &nbsp; Outstanding reviewer, ICCV, 2017"
 
 - title: Fundação para a Ciência e Tecnologia
   description: Graduate Fellowship
