--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -1,8 +1,8 @@
 name: Pedro Morgado
-position: PhD Candidate
+position: Postdoctoral Fellow
 institution:
-  - Electrical and Computer Engineering
-  - University of California, San Diego
+  - Robotics Institute
+  - Carnegie Mellon University
 links:
   Scholar: "https://scholar.google.com/citations?user=_ntLSQ4AAAAJ&view_op=list_works&sortby=pubdate"
   Github: "https://github.com/pedro-morgado"
