--- a/_data/education.yaml
+++ b/_data/education.yaml
@@ -1,6 +1,6 @@
-- position: Ph.D. Student, Electrical Engineering
+- position: Ph.D., Electrical and Computer Engineering
   institution: University of California, San Diego
-  time: Current
+  time: 2021
 
 - position: M.Sc., Electrical and Computer Engineering
   institution: Instituto Superior Técnico, Lisbon, Portugal
