--- a/_data/work.yaml
+++ b/_data/work.yaml
@@ -1,6 +1,10 @@
+- position: Postdoctoral Fellow
+  institution: Carnegie Mellon University, Pittsburgh (PA)
+  time: 2021-Now
+
 - position: Graduate Student Resercher
   institution: University of California, San Diego
-  time: 2015-Now
+  time: 2015-2021
 
 - position: Research Intern
   institution: Facebook AI Research (FAIR), New York, USA
