--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -4,7 +4,7 @@ institution:
   - Robotics Institute
   - Carnegie Mellon University
 links:
-  Email:    "mailto:pmaravil@eng.ucsd.edu"
+  Email:    "mailto:pmorgado@andrew.cmu.edu"
   CV:       "assets/files/cv.pdf"
   Scholar:  "https://scholar.google.com/citations?user=_ntLSQ4AAAAJ&view_op=list_works&sortby=pubdate"
   Github:   "https://github.com/pedro-morgado"
