--- a/_data/work.yaml
+++ b/_data/work.yaml
@@ -1,5 +1,5 @@
 - position: Postdoctoral Fellow
-  institution: Carnegie Mellon University, Pittsburgh (PA)
+  institution: Carnegie Mellon University, Pittsburgh
   time: 2021-Now
 
 - position: Graduate Student Resercher
@@ -7,11 +7,11 @@
   time: 2015-2021
 
 - position: Research Intern
-  institution: Facebook AI Research (FAIR), New York, USA
+  institution: Facebook AI Research (FAIR), New York
   time: Summer, 2019
 
 - position: Research Scientist Intern
-  institution: Adobe Research, Seattle, USA
+  institution: Adobe, Seattle
   time: Summer, 2017
 
 - position: Teaching Assistant, Digital Signal Processing II
