ezvsl and continuous ssl

--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -6,6 +6,6 @@ institution:
 links:
   Email:    "mailto:pmorgado@andrew.cmu.edu"
   CV:       "assets/files/cv.pdf"
-  Scholar:  "https://scholar.google.com/citations?user=_ntLSQ4AAAAJ&view_op=list_works&sortby=pubdate"
+  Scholar:  "https://scholar.google.com/citations?hl=en&user=_ntLSQ4AAAAJ"
   Github:   "https://github.com/pedro-morgado"
 
