--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -9,6 +9,18 @@ Ishan:
   name: Ishan Misra
   website: https://imisra.github.io/
 
+Abhinav:
+  name: Abhinav Gupta
+  website: http://www.cs.cmu.edu/~abhinavg/
+
+Senthil:
+  name: Senthil Purushwalkam
+  website: http://www.cs.cmu.edu/~spurushw/
+
+ShentongMo:
+  name: Shentong Mo
+  website: https://github.com/stoneMo
+
 Tim:
   name: Timothy Langlois
   website: https://langlo.is/
