job and new papers

--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -1,11 +1,11 @@
 name: Pedro Morgado
-position: Postdoctoral Fellow
+position: Assistant Professor
 institution:
-  - Robotics Institute
-  - Carnegie Mellon University
+  - University of Wisconsin-Madison
+  - Electrical and Computer Engineering
 links:
-  Email:    "mailto:pmorgado@andrew.cmu.edu"
+  Email:    "mailto:pmorgado@wisc.edu"
   CV:       "assets/files/cv.pdf"
-  Scholar:  "https://scholar.google.com/citations?hl=en&user=_ntLSQ4AAAAJ"
+  Scholar:  "https://scholar.google.com/citations?user=Yy4gO-QAAAAJ"
   Github:   "https://github.com/pedro-morgado"
 
