--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,14 @@
 
 title: Pedro's homepage
 name: Pedro Morgado
-email: pmaravil@eng.ucsd.edu
+email: pmorgado@wisc.edu
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pedro-morgado.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pedro-morgado
 
 collections:
-  - publications
+  publications:
+    output: true
 
 # Build settings
 #theme: minima
