--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,6 @@
 recent:
-# - (Oct 2022) Invited talk at <a href="https://av4d.org/">AV4D Workshop</a> @ ECCV 2022.
+- <b>(Oct 2022)</b> Invited talk at <a href="https://av4d.org/">AV4D Workshop</a> @ ECCV 2022.
+- <b>(Sep 2022)</b> Two papers (<a href="https://arxiv.org/abs/2209.09634">SLAVC</a> and <a href="https://arxiv.org/abs/2209.13583">RepLAI</a>) accepted at NeurIPS 2022.
 - <b>(Aug 2022)</b> Starting as Assistant Professor at University of Wisconsin-Madison.
 - <b>(Jul 2022)</b> Paper on <a href="https://arxiv.org/abs/2203.12710">Continuous Self-Supervised Learning</a> accepted at ECCV 2022 as oral.
 - <b>(Jul 2022)</b> Paper on <a href="https://arxiv.org/abs/2203.09324">Visual Sound Source Localization</a> accepted at ECCV 2022.
