--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -1,8 +1,9 @@
 name: Pedro Morgado
 position: Assistant Professor
 institution:
-  - University of Wisconsin-Madison
   - Electrical and Computer Engineering
+  - Computer Sciences (Affiliate)
+  - University of Wisconsin-Madison
 links:
   Email:    "mailto:pmorgado@wisc.edu"
   CV:       "assets/files/cv.pdf"
