--- a/_data/group.yaml
+++ b/_data/group.yaml
@@ -1,10 +1,13 @@
 phd:
-  - <a href="https://cewu.github.io/">Cheng-En Wu</a> (ECE w/ Yu Hen Yu)
-  - Yibing Wei (CS)
+  - <a target="_blank" href="https://cewu.github.io/">Cheng-En Wu</a> (w/ Yu Hen Hu)
+  - <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=OyQP1d4AAAAJ">Yibing Wei</a>
+  - <a target="_blank" href="https://lzhangbj.github.io/">Lin Zhang</a>
+  - Sam Church
 msc:
-  - Jones Lin (CS)
-  - Ting-Hung Lin (ECE)
-  - Victor Suciu (CS)
+  - Victor Suciu
+  - Jones Lin
+  - Yijing Zhang
 collabs:
-  - <a href="https://himangim.github.io/">Himangi Mittal</a> (CMU w/ Abhinav Gupta)
-  - <a href="https://scholar.google.com/citations?user=6aYncPAAAAAJ">Shentong Mo</a> (CMU)
+  - <a target="_blank" href="https://himangim.github.io/">Himangi Mittal</a> (CMU)
+  - <a target="_blank" href="https://scholar.google.com/citations?user=6aYncPAAAAAJ">Shentong Mo</a> (CMU)
+  - Kirill Vishniakov (MBZUAI)
