--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -2,6 +2,14 @@ Me:
   name: Pedro Morgado
   website: https://pedro-morgado.github.io/
 
+ChengEn:
+  name: Cheng-En Wu
+  website: https://cewu.github.io/
+
+YuHen:
+  name: Yu Hen Hu
+  website: https://directory.engr.wisc.edu/ece/Faculty/Hu_Yu-hen/
+
 Nuno:
   name: Nuno Vasconcelos
   website: http://www.svcl.ucsd.edu/~nuno/
