--- a/_data/teaching.yaml
+++ b/_data/teaching.yaml
@@ -1,1 +1,2 @@
-- <b>CS/ECE/ME 532</b> - Matrix Methods in Machine Learning (Fall 2022)
+- <b>CS/ECE 539</b> - Intro to Artificial Neural Networks (Fall 2023)
+- <b>CS/ECE/ME 532</b> - Matrix Methods in Machine Learning (Spring 2022, Fall 2022)
