--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,5 @@
 recent:
-- <b>(Apr 2023)</b> Paper on unified audio-visual modeling accepted at ICML 2023. Paper and code coming soon.
+- <b>(Apr 2023)</b> Paper on unified audio-visual modeling (<a href="https://arxiv.org/abs/2305.19458">OneAVM</a>) accepted at ICML 2023.
 - <b>(Mar 2023)</b> Serving as Area Chair at NeurIPS 2023.
 - <b>(Feb 2023)</b> Invited talk at the <a href="https://uob-mavi.github.io/meetings//">MaVi Seminar Series</a> @ University of Bristol.
 - <b>(Feb 2023)</b> Invited talk at the SIO ML Group @ University of California San Diego.
