--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Pedro's homepage
-name: Pedro Morgado
-email: pmorgado@wisc.edu
+title: Qitong's homepage
+name: Qitong Wang
+email: wqtwjt@udel.edu
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://pedro-morgado.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  pedro-morgado
+# url: "https://pedro-morgado.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  wqtwjt1996
 
 collections:
   publications:
