--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,13 +1,7 @@
 recent:
-- <b>(Jul 2023)</b> Paper on unpaired mutiview accepted at ICCV 2023.
+- <b>(Jul 2023)</b> Paper on <a href="https://arxiv.org/abs/2308.11489">unpaired mutiview</a> accepted at ICCV 2023.
 - <b>(May 2023)</b> Passed my preliminary exam.
 - <b>(Nov 2022)</b> Paper on <a href="https://arxiv.org/abs/2103.16565">video augmentation</a> accepted at CVIU 2022.
 - <b>(May 2022)</b> Paper on <a href="https://ieeexplore.ieee.org/document/9850390">text detection</a> accepted at TMM 2022.
 - <b>(Sep 2021)</b> Joined <a href="https://deep-real.github.io/index.html">Deep-REAL lab</a> at University of Delaware.
 # more:
-# - <b>(Aug 2021)</b> Starting my postdoc at Carnegie Mellon University.
-# - <b>(Jun 2021)</b> Successfully defended my <a href="https://escholarship.org/uc/item/13s568v6">PhD thesis</a>. Thank you to all mentors and collaborators!
-# - <b>(Jun 2021)</b> Our <a href="https://arxiv.org/abs/2004.12943">CVPR 2021 paper on audio-visual self-supervised learning (AVID)</a> is a Best Paper Candidate.
-# - <b>(Mar 2021)</b> Two papers (<a href="https://arxiv.org/abs/2004.12943">AVID</a> and <a href="https://arxiv.org/abs/2103.15916">Robust xID</a>) accepted at CVPR 2021 (1 as oral).
-# - <b>(Sep 2020)</b> Paper on <a href="https://arxiv.org/abs/2011.01819">Audio-Visual Spatial Alignment</a> accepted at NeurIPS 2020.
-# - <b>(Jul 2020)</b> Paper on <a href="http://arxiv.org/abs/2007.13912">Deep Hashing</a> accepted at IJCV.
