--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+- <b>(Sep 2023)</b> Invited talk at Off-Earth Geopolitics Workshop @ University of Oxford.
 - <b>(Jul 2023)</b> Paper on <a href="https://arxiv.org/abs/2308.11489">unpaired mutiview</a> accepted at ICCV 2023.
 - <b>(May 2023)</b> Passed my preliminary exam.
 - <b>(Nov 2022)</b> Paper on <a href="https://arxiv.org/abs/2103.16565">video augmentation</a> accepted at CVIU 2022.
