--- a/_data/service.yaml
+++ b/_data/service.yaml
@@ -1,3 +1,3 @@
-- <b>Volunteering Conference Reviewer</b> - CVPR-2023, NeurIPS-2023.
-- <b>Journel Reviewer</b> - TIP.
-- <b>Volunteering Journel Reviewer</b> - TAI.
+- <b>Volunteering Conference Reviewer</b> - CVPR-2023, NeurIPS-2023, AAAI-2024.
+- <b>Journel Reviewer</b> - IEEE Transactions on Image Processing.
+- <b>Volunteering Journel Reviewer</b> - IEEE Transactions on Artificial Intelligence.
