--- a/_data/info.yaml
+++ b/_data/info.yaml
@@ -8,5 +8,5 @@ links:
   CV:       "assets/files/Resume_Qitong_Wang_.pdf"
   Scholar:  "https://scholar.google.com/citations?user=wWLtfPEAAAAJ&hl=en"
   Github:   "https://github.com/wqtwjt1996"
-  # Office:   "Smith Hall 208<br>18 Amstel Ave, Newark, DE 19716"
+  X (Twitter):   "https://twitter.com/QitongWang2242"
 
