--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,5 @@
 recent:
-- <b>(Dec 2023)</b> Received "Department Travel Award for Outstanding Conference Publications, 2023" from CIS Department of UDel.
+- <b>(Dec 2023)</b> Received "Department Travel Award for Outstanding Conference Publications, 2023" from CIS Department of the University of Delaware.
 - <b>(Sep 2023)</b> Invited talk at Off-Earth Geopolitics Workshop @ University of Oxford.
 - <b>(Jul 2023)</b> Paper on <a href="https://arxiv.org/abs/2308.11489">unpaired mutiview</a> accepted at ICCV 2023.
 - <b>(May 2023)</b> Passed my preliminary exam.
