--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,6 @@
 recent:
+- <b>(May 2024)</b> I will be serving as a reviewer of BMVC 2024.
+- <b>(May 2024)</b> Received CIS Distinguished Graduate Student Award of the UD.
 - <b>(Mar 2024)</b> I will be serving as a reviewer of ECCV 2024.
 - <b>(Dec 2023)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
 - <b>(Sep 2023)</b> Invited talk at Off-Earth Geopolitics Workshop @ University of Oxford.
