--- a/_data/service.yaml
+++ b/_data/service.yaml
@@ -1,4 +1,4 @@
-- <b>Conference Reviewer</b> - ECCV-2024, BMVC-2024.
+- <b>Conference Reviewer</b> - ECCV-2024, BMVC-2024, CVPR-2025.
 - <b>Journal Reviewer</b> - IEEE Transactions on Image Processing (TIP), PLOS ONE.
-- <b>Volunteering Conference Reviewer</b> - CVPR-2023, NeurIPS-2023, AAAI-2024.
-- <b>Volunteering Journal Reviewer</b> - IEEE Transactions on Artificial Intelligence (TAI), IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).
+- <b>Volunteering Conference Reviewer</b> - CVPR-2023, NeurIPS-2023, AAAI-2024, ICLR-2025.
+- <b>Volunteering Journal Reviewer</b> - IEEE Transactions on Artificial Intelligence (TAI), IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), ACM Transactions on Intelligent Systems and Technology (TIST).
