--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+ - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
  - <b>(Dec 2024)</b> I will be joining Dolby Laboratories as a PhD Research Intern in the summer of 2025.
  - <b>(Nov 2024)</b> I will be serving as a reviewer of CVPR 2025.
