--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -1,7 +1,7 @@
 Me:
   name: Qitong Wang
   institution: University of Delaware
-  website: https://wqtwjt1996.github.io/personal_website/
+  website: https://wqtwjt1996.github.io
 
 Long:
   name: Long Zhao
