--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+ - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
  - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
  - <b>(Dec 2024)</b> I will be joining Dolby Laboratories as a PhD Research Intern in the summer of 2025.
@@ -10,7 +11,7 @@ recent:
  - <b>(Dec 2023)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Sep 2023)</b> Invited talk at Off-Earth Geopolitics Workshop @ University of Oxford.
  - <b>(Jul 2023)</b> Paper on <a href="https://arxiv.org/abs/2308.11489">unpaired mutiview</a> accepted at ICCV 2023.
-# more:
+more:
  - <b>(May 2023)</b> Passed my preliminary exam.
  - <b>(Nov 2022)</b> Paper on <a href="https://arxiv.org/abs/2103.16565">video augmentation</a> accepted at CVIU 2022.
  - <b>(May 2022)</b> Paper on <a href="https://ieeexplore.ieee.org/document/9850390">text detection</a> accepted at TMM 2022.
