--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+ - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
  - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
  - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
@@ -8,8 +9,8 @@ recent:
  - <b>(May 2024)</b> I will be serving as a reviewer of BMVC 2024.
  - <b>(May 2024)</b> Received CIS Distinguished Graduate Student Award of the UD.
  - <b>(Mar 2024)</b> I will be serving as a reviewer of ECCV 2024.
+ more:
  - <b>(Dec 2023)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
-more:
  - <b>(Sep 2023)</b> Invited talk at Off-Earth Geopolitics Workshop @ University of Oxford.
  - <b>(Jul 2023)</b> Paper on <a href="https://arxiv.org/abs/2308.11489">unpaired mutiview</a> accepted at ICCV 2023.
  - <b>(May 2023)</b> Passed my preliminary exam.
