--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+ - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
  - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
@@ -8,8 +9,8 @@ recent:
  - <b>(Nov 2024)</b> I will be serving as a reviewer of CVPR 2025.
  - <b>(Sep 2024)</b> I will be serving as a reviewer of PLOS ONE.
  - <b>(May 2024)</b> I will be serving as a reviewer of BMVC 2024.
- - <b>(May 2024)</b> Received CIS Distinguished Graduate Student Award of the UD.
 more:
+ - <b>(May 2024)</b> Received CIS Distinguished Graduate Student Award of the UD.
  - <b>(Mar 2024)</b> I will be serving as a reviewer of ECCV 2024.
  - <b>(Dec 2023)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Sep 2023)</b> Invited talk at Off-Earth Geopolitics Workshop @ University of Oxford.
