--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,6 @@
 recent:
+ - <b>(Jun 2025)</b> Paper of MO-SAM provisionally accepted at PLOS Sustainability and Transformation 2025.
+ - <b>(Jun 2025)</b> Started the first day of my internship at Dolby Laboratories! :)
  - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
@@ -7,9 +9,9 @@ recent:
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
  - <b>(Dec 2024)</b> I will be joining Dolby Laboratories as a PhD Research Intern in the summer of 2025.
  - <b>(Nov 2024)</b> I will be serving as a reviewer of CVPR 2025.
+more:
  - <b>(Sep 2024)</b> I will be serving as a reviewer of PLOS ONE.
  - <b>(May 2024)</b> I will be serving as a reviewer of BMVC 2024.
-more:
  - <b>(May 2024)</b> Received CIS Distinguished Graduate Student Award of the UD.
  - <b>(Mar 2024)</b> I will be serving as a reviewer of ECCV 2024.
  - <b>(Dec 2023)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
