--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -77,3 +77,43 @@ Margrit:
   name: Margrit Betke
   institution: Boston University
   website: https://www.cs.bu.edu/faculty/betke/
+
+Emmanuel:
+  name: Emmanuel Chinkaka
+  institution: University of Delaware
+  website: https://www.linkedin.com/in/emmanuel-chinkaka-5496ab12a/
+
+Romain:
+  name: Romain Richaud
+  instituion: University of Delaware
+  website: https://www.linkedin.com/in/romain-richaud-649aa0ab/
+
+Mehrnaz:
+  name: Mehrnaz Haghdadi
+  instituion: University of Delaware
+  website: https://scholar.google.com/citations?user=xvIu6PEAAAAJ&hl=en
+
+Coryn:
+  name: Coryn Wolk
+  instituion: University of Delaware
+  website: https://www.linkedin.com/in/coryn-wolk-3b56b065/
+
+Kopo:
+  name: Kopo V. Oromeng
+  instituion: University of Delaware
+  website: https://www.linkedin.com/in/kopooromeng/
+
+Kyle:
+  name: Kyle Frankel Davis
+  instituion: University of Delaware
+  website: https://www.udel.edu/academics/colleges/ceoe/departments/gss/faculty/kyle-davis/
+
+Federica:
+  name: Federica Bianco
+  instituion: University of Delaware
+  website: https://fbb.space/
+
+Julie:
+  name: Julie Michelle Klinger
+  instituion: University of Delaware
+  website: https://en.wikipedia.org/wiki/Julie_Michelle_Klinger
