--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,15 +1,17 @@
 recent:
- - <b>(Jun 2025)</b> Paper of MO-SAM provisionally accepted at PLOS Sustainability and Transformation 2025.
- - <b>(Jun 2025)</b> Started the first day of my internship at Dolby Laboratories! :)
+ - <b>(Jul 2025)</b> I will be serving as a reviewer of ACMMM 2025 Datasets.
+ - <b>(Jul 2025)</b> I will be serving as a Program Committee of AAAI 2026.
+ - <b>(Jul 2025)</b> I will be serving as a reviewer of IEEE Access.
+ - <b>(Jul 2025)</b> Paper of MO-SAM accepted at PLOS Sustainability and Transformation 2025.
  - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
  - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
  - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
+more:
  - <b>(Dec 2024)</b> I will be joining Dolby Laboratories as a PhD Research Intern in the summer of 2025.
  - <b>(Nov 2024)</b> I will be serving as a reviewer of CVPR 2025.
-more:
  - <b>(Sep 2024)</b> I will be serving as a reviewer of PLOS ONE.
  - <b>(May 2024)</b> I will be serving as a reviewer of BMVC 2024.
  - <b>(May 2024)</b> Received CIS Distinguished Graduate Student Award of the UD.
