--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+ - <b>(Oct 2025)</b> I will be serving as a reviewer of Journal of Supercomputing.
  - <b>(Sep 2025)</b> I will be serving as a reviewer of CVPR 2026.
  - <b>(Jul 2025)</b> I will be serving as a reviewer of ACMMM 2025 Datasets.
  - <b>(Jul 2025)</b> I will be serving as the Program Committee of AAAI 2026.
@@ -8,8 +9,8 @@ recent:
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
  - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
- - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
 more:
+ - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
  - <b>(Dec 2024)</b> I will be joining Dolby Laboratories as a PhD Research Intern in the summer of 2025.
  - <b>(Nov 2024)</b> I will be serving as a reviewer of CVPR 2025.
