--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,6 +1,7 @@
 recent:
- - <b>(Oct 2025)</b> I will be serving as a reviewer of Journal of Supercomputing.
- - <b>(Sep 2025)</b> I will be serving as a reviewer of CVPR 2026.
+ - <b>(Dec 2025)</b> I have received and accepted the return internship offer from Dolby Laboratories for Summer 2026.
+ - <b>(Nov 2025)</b> I will be serving as a reviewer of CVPR 2026.
+ - <b>(Oct 2025)</b> I will be serving as a reviewer of the Journal of Supercomputing.
  - <b>(Jul 2025)</b> I will be serving as a reviewer of ACMMM 2025 Datasets.
  - <b>(Jul 2025)</b> I will be serving as the Program Committee of AAAI 2026.
  - <b>(Jul 2025)</b> I will be serving as a reviewer of IEEE Access.
@@ -8,11 +9,10 @@ recent:
  - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
- - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
 more:
+ - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
  - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
- - <b>(Dec 2024)</b> I will be joining Dolby Laboratories as a PhD Research Intern in the summer of 2025.
  - <b>(Nov 2024)</b> I will be serving as a reviewer of CVPR 2025.
  - <b>(Sep 2024)</b> I will be serving as a reviewer of PLOS ONE.
  - <b>(May 2024)</b> I will be serving as a reviewer of BMVC 2024.
