Update conference reviewer years in service.yaml

--- a/_data/service.yaml
+++ b/_data/service.yaml
@@ -1,4 +1,4 @@
-- <b>Conference Reviewer</b> - ECCV 2024, CVPR 2025, ICCV 2025, ACMMM 2025, ACMMM 2025 Datasets, BMVC 2024-2025.
+- <b>Conference Reviewer</b> - ECCV 2024, CVPR 2025-2026, ICCV 2025, ACMMM 2025, ACMMM 2025 Datasets, BMVC 2024-2025.
 - <b>Journal Reviewer</b> - IEEE Transactions on Image Processing (TIP), IEEE Transactions on Multimedia (TMM), IEEE Access, Journal of Supercomputing, PLOS ONE.
 - <b>Program Committee</b> - AAAI 2026.
 - <b>Volunteering Conference Reviewer</b> - CVPR 2023, NeurIPS 2023, AAAI 2024, ICLR 2025.
