--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,6 @@
 recent:
+ - <b>(Jan 2026)</b> I will be serving as a reviewer of ICML 2026.
+ - <b>(Jan 2026)</b> I will be serving as a reviewer of ECCV 2026.
  - <b>(Dec 2025)</b> I have received and accepted the return internship offer from Dolby Laboratories for Summer 2026.
  - <b>(Nov 2025)</b> I will be serving as a reviewer of CVPR 2026.
  - <b>(Oct 2025)</b> I will be serving as a reviewer of the Journal of Supercomputing.
@@ -7,9 +9,9 @@ recent:
  - <b>(Jul 2025)</b> I will be serving as a reviewer of IEEE Access.
  - <b>(Jul 2025)</b> Paper of MO-SAM accepted at PLOS Sustainability and Transformation 2025.
  - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
+more:
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
-more:
  - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
  - <b>(Dec 2024)</b> Received Outstanding Conference Travel Award from CIS Department of the UD.
  - <b>(Dec 2024)</b> Paper on <a href="https://arxiv.org/abs/2412.13333">VLM prediction rationality</a> accepted at AAAI 2025.
