--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,6 +1,7 @@
 recent:
  - <b>(Jan 2026)</b> I will be serving as a reviewer of ICML 2026.
- - <b>(Jan 2026)</b> I will be serving as a reviewer of ECCV 2026.
+ - <b>(Jan 2026)</b> I will be serving as a reviewer of ECCV 2026. 
+ - <b>(Jan 2026)</b> I will be serving as a reviewer of ACM Computing Surveys.
  - <b>(Dec 2025)</b> I have received and accepted the return internship offer from Dolby Laboratories for Summer 2026.
  - <b>(Nov 2025)</b> I will be serving as a reviewer of CVPR 2026.
  - <b>(Oct 2025)</b> I will be serving as a reviewer of the Journal of Supercomputing.
@@ -8,8 +9,8 @@ recent:
  - <b>(Jul 2025)</b> I will be serving as the Program Committee of AAAI 2026.
  - <b>(Jul 2025)</b> I will be serving as a reviewer of IEEE Access.
  - <b>(Jul 2025)</b> Paper of MO-SAM accepted at PLOS Sustainability and Transformation 2025.
- - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
 more:
+ - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
  - <b>(Dec 2024)</b> I will be serving as a reviewer of IEEE TMM.
