Add upcoming reviewer role for BMVC 2026

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,5 @@
 recent:
+ - <b>(Feb 2026)</b> I will be serving as a reviewer of BMVC 2026.
  - <b>(Jan 2026)</b> I will be serving as a reviewer of ICML 2026.
  - <b>(Jan 2026)</b> I will be serving as a reviewer of ECCV 2026. 
  - <b>(Jan 2026)</b> I will be serving as a reviewer of ACM Computing Surveys.
@@ -8,8 +9,8 @@ recent:
  - <b>(Jul 2025)</b> I will be serving as a reviewer of ACMMM 2025 Datasets.
  - <b>(Jul 2025)</b> I will be serving as the Program Committee of AAAI 2026.
  - <b>(Jul 2025)</b> I will be serving as a reviewer of IEEE Access.
- - <b>(Jul 2025)</b> Paper of MO-SAM accepted at PLOS Sustainability and Transformation 2025.
 more:
+ - <b>(Jul 2025)</b> Paper of MO-SAM accepted at PLOS Sustainability and Transformation 2025.
  - <b>(May 2025)</b> I will be serving as a reviewer of BMVC 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ACMMM 2025.
  - <b>(Feb 2025)</b> I will be serving as a reviewer of ICCV 2025.
