Update role for ACMMM 2026 from reviewer to committee

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,5 @@
 recent:
- - <b>(Feb 2026)</b> I will be serving as a reviewer of ACMMM 2026.
+ - <b>(Feb 2026)</b> I will be serving as the Program Committee of ACMMM 2026.
  - <b>(Feb 2026)</b> I will be serving as a reviewer of BMVC 2026.
  - <b>(Jan 2026)</b> I will be serving as a reviewer of ICML 2026.
  - <b>(Jan 2026)</b> I will be serving as a reviewer of ECCV 2026. 
