--- a/_data/service.yaml
+++ b/_data/service.yaml
@@ -1,5 +1,5 @@
-- <b>Conference Reviewer</b> - ICML 2026, CVPR 2025-2026, ICCV 2025, ECCV 2024-2026, ACMMM 2025-2026, ACMMM 2025 Datasets, BMVC 2024-2026.
+- <b>Conference Reviewer</b> - ICML 2026, CVPR 2025-2026, ICCV 2025, ECCV 2024-2026, ACMMM 2025, ACMMM 2025 Datasets, BMVC 2024-2026.
 - <b>Journal Reviewer</b> - IEEE Transactions on Image Processing (TIP), IEEE Transactions on Multimedia (TMM), ACM Computing Surveys, IEEE Access, Journal of Supercomputing, PLOS ONE.
-- <b>Program Committee</b> - AAAI 2026.
+- <b>Program Committee</b> - AAAI 2026, ACMMM 2026.
 - <b>Volunteering Conference Reviewer</b> - CVPR 2023, NeurIPS 2023, AAAI 2024, ICLR 2025.
 - <b>Volunteering Journal Reviewer</b> - IEEE Transactions on Artificial Intelligence (TAI), IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), ACM Transactions on Intelligent Systems and Technology (TIST).
